# machine-payments

./: .cli.json  .env.template  .gitignore  CONTRIBUTING.md  README.md
.github/: dependabot.yml
.github/workflows/: ci_node.yaml  ci_python.yaml
server/node-typescript/: README.md  main.ts  package.json  tsconfig.json
server/python/: README.md  main.py  pyproject.toml
